# weather-station

./: .gitignore  Dockerfile.data-server  Dockerfile.mlflow  Dockerfile.mlpipeline  Dockerfile.populate-bucket  Dockerfile.server-fastapi  Dockerfile.weather-station  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
FastAPI_server/: .env  app.py  util.py
FastAPI_server/utilities/: utilities.py
FastAPI_server_local/: .env  app.py  phones.txt  script.py
FastAPI_server_local/utilities/: utilities.py
artifacts/: outlier_series_dict.pkl
before_everything_there_were_notebooks/: 01-Create the raw development and production datasets.ipynb  02a-Preprocess the development  dataset - Timestamp as index.ipynb  02b-Preprocess the development dataset - Columns.ipynb  02d-Preprocess the development dataset - Imputation.ipynb  02e-Preprocess the development dataset - Target column FutureWeather.ipynb  03-Visualize a dataset with plots.ipynb  04-Modeling scikit learn pipeline.ipynb  04-Modelling.ipynb  04a-Modelling.ipynb  04aa-Modelling.ipynb  04b-ModellingWithRetraining.ipynb  05a-Modelling_with_mlflow.ipynb  07-Deepchecks_for_data_and_model_validations.ipynb  07a-PrepareDataForDeepchecks.ipynb  07b-Deepchecks testing.ipynb  6-RawDataWithoutNaNs.ipynb  6c-RawDataWithoutNaNs.ipynb  fastAPI_pipeline.ipynb
before_everything_there_were_notebooks/artifacts/: outlier_series_dict.pkl
client_app/: api.env  app.py  data.env  data.py  data_server.py
datasets/: clean_weather_dataset_with_target.pkl
deepchecks/dev/: dev.pkl
explore/: explore.py
models/: dataset_ingestion_pipeline.pkl  model.pkl  predictors_feature_eng_pipeline.pkl
models/linear_svc/: dataset_ingestion_pipeline.pkl
models_trained_in_two_stages/decision_tree/: train_test_model.pkl
models_trained_in_two_stages/random_forest/: remove_horizonless_rows_pipeline.pkl
models_with_two_trainings/decision_tree/: train_val_model.pkl  train_val_predictors_feature_eng_pipeline.pkl
models_with_two_trainings/linear_svc/: train_test_model.pkl  train_val_model.pkl
models_with_two_trainings/logistic_regression/: train_test_model.pkl  train_test_predictors_feature_eng_pipeline.pkl  train_val_model.pkl
models_with_two_trainings/random_forest/: target_creation_pipeline.pkl  train_test_model.pkl  train_val_model.pkl
notebooks/: Modelling.ipynb  Modelling_with_mlflow.ipynb  Modelling_with_two_trainings.ipynb
requirements/: data-science-deploy.requirements.txt  data-science.requirements.txt  server.requirements.txt  style.requirements.txt
scripts/: model_the_data.py
src/weather/data/: data_transformers.py  load_datasets.py  make_datasets.py  minio_utilities.py  populate_bucket.py  prep_datasets.py
src/weather/features/: dataframe_transformer.py  feature_transformer.py  skl_features.py
src/weather/helpers/: utils.py
src/weather/metrics/: evaluate.py
src/weather/mlflow/: registry.py  tracking.py
src/weather/models/: models.py  pipelines.py  skl_tracked_train_model.py  skl_tracked_train_models.py  skl_train_models.py  skl_validate_models.py
src/weather/pipelines/: blocks.py  common.py  definitions.py
src/weather/pipelines/flows/: automated_pipeline.py  data_extraction.py  full_pipeline.py  oe_basic.py
src/weather/pipelines/for_release/: serve_full_pipeline.py
src/weather/transformers/: skl_transformer_makers.py  skl_transformers.py  transformer_makers.py  transformer_utilities.py  transformers.py
weather-station/: .env  data.env  data.py  test.py  util.py  weather-station.py
weather-station/utilities/: utilities.py
weather_station_local/: weather-station.py
weather_station_local/utilities/: utilities.py
