# This will eventually go into pyproject.toml
[options]
package_dir =
    = src
install_requires =
    pandas
    numpy
    # Note that we NEED to use the same version of scikit-learn than we used to train
    scikit-learn==1.2.*
    prettytable
    python-dotenv
    dvc[s3,gs]
    pyyaml
    minio

[options.extras_require]
server =
    fastapi
    uvicorn
    pydantic
    pydantic-settings
    mlflow==2.5.0
    # To save model in ONNX
    skl2onnx
    # To run an ONNX model
    onnxruntime
    pymongo

batch-serving =
    mlflow==2.5.0
    timeloop

monitoring =
    mlflow==2.5.0
    timeloop
    evidently
    pymongo

client =
    streamlit

testing =
    pytest
    pytest-cov

performance-intel =
    scikit-learn-intelex

data-science =
    jupyter
    matplotlib
    seaborn
    prettytable
    hyperopt
    mlflow==2.5.0
    prefect>=2.13.5
    great_expectations>=0.18.0
    deepchecks==0.17.5

style =
    ruff
    black

all =
    %(server)s
    %(client)s
    %(data-science)s
    %(style)s
